# promptgenie

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.cursor/docs/: project-README.md  project-overview.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: feishu_sync.rs  lib.rs
src/components/: ConfirmDialog.tsx  MainContent.tsx  PromptEditor.tsx  Settings.tsx  Sidebar.tsx  TagManager.tsx
src/services/: db.ts
